# cc

./: .dockerignore  .gitignore  CC-TWITTER-BOT-PLAN.md  CHANGELOG.md  CLAUDE.md  GIT_PUSH_INSTRUCTIONS.md  LAUNCH_THREAD.md  Makefile  RETRY_4_SUMMARY.md  docker-compose.full.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/_template/: page.tsx
app/autopsy/: page.tsx
app/bounty/: page.tsx
app/ccflip/: page.tsx
brain/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  package-lock.json  package.json
docker/: Dockerfile.base  Dockerfile.brain  Dockerfile.dev  Dockerfile.stream  Dockerfile.web  entrypoint-brain.sh  ssh-config
docs/: brain.md  brand.md  claude-code-maintenance.md  crypto-safety.md  docker.md  gamefi.md  idle-grind.md  livestream.md  reasoning-system.md  swap-terminal.md  twitter-bot.md  twitter-thread-templates.md  twitter-thread-trading-terminal.md  ui-styleguide.md  video-generator.md  vj-agent.md
programs/cc-casino/: Anchor.toml  Cargo.toml
programs/cc-casino/src/: lib.rs  state.rs
programs/cc-casino/src/instructions/: coinflip.rs  crash.rs  fund.rs  gacha.rs  initialize.rs  jackpot.rs  mod.rs  withdraw.rs
stream/: Dockerfile  com.ccwtf.stream.plist  export-cookies.sh  kick-stunnel.conf  package-lock.json  package.json  stream-service.sh
video/: package-lock.json  record-gameplay.ts
vj/: package-lock.json  package.json  tsconfig.json
worker/: TWITTER-BOT.md  package-lock.json  package.json  wrangler.toml
(+138 files in other folders)
