[package]
name = "cc-casino"
version = "0.1.0"
description = "CC Casino - On-chain gambling games for $CC token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cc_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"

# Pin blake3 to avoid edition2024 requirement
blake3 = "=1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
